--- a/basic/main.css
+++ b/basic/main.css
@@ -26,4 +26,9 @@ div .main {
       -ms-flex-align: center;
           align-items: center;
 }
+
+.light {
+  background-color: white;
+  color: white;
+}
 /*# sourceMappingURL=main.css.map */
